--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -92,6 +92,9 @@
     <string name="libraries_use_detail">A continuación se establecen los avisos de derechos de autor para el software de terceros que puede ser parte de la aplicación móvil Eclipse Soundscapes.
         Agradecemos a la comunidad de código abierto por todas sus contribuciones.</string>
 
+    <string name="banner_img_desc">El banner de EclipseSoundscapes</string>
+    <string name="partner_logo_img_desc">The logo of %1$s</string>
+
     <!-- Eclipse Center -->
     <string name="next_eclipse_info">La información del próximo eclipse</string>
     <string name="next_eclipse_user_location">Próximo eclipse en su ubicación</string>
@@ -143,6 +146,7 @@
 
     <string name="audio_descriptions">Descripciones de Audio</string>
     <string name="upcoming_audio">Más descripciones de audio próximamente &#8230;</string>
+    <string name="play_img_desc">Una imagen del botón de reproducción multimedia</string>
 
     <string name="duration_desc_seconds">%1$s segundos</string>
     <string name="duration_desc_minute">un minuto, %1$s segundos</string>
@@ -355,6 +359,8 @@
 
     <string name="current_event_image_description">Una imagen del evento de eclipse actual</string>
 
+    <string name="eclipse_item_img_desc">una imagen de %1$s</string>
+
     <!-- eclipse details -->
     <string name="first_contact">Primer contacto</string>
     <string name="bailys_beads">Perlas de Baily</string>
@@ -404,13 +410,19 @@
         Al mover el dedo hacia las partes brillantes del sol, el teléfono vibrará más. Al mover el dedo hacia los espacios oscuros bloqueados por el disco lunar, la vibración disminuirá y desaparecerá.
         Al prestar mucha atención a los tonos sonoros y a la potencia de la vibración del teléfono, se puede saber cuánta luz solar es visible en cada etapa del eclipse y se pueden explorar algunas de las características más fascinantes de la corona solar.</string>
 
+    <string name="walkthrough_rumble_map_img_desc">Una imagen de la función Rumble Map</string>
+
     <string name="walkthrough_eclipse_center">El centro de eclipses es el lugar al que hay que dirigirse para aprender más sobre los eclipses en su área y así descubrirlos cuando haya uno.
         Al abrir el centro de eclipses, se le pedirá que indique su ubicación geográfica. Una vez que usted acepte, encontrará una cuenta atrás hasta el próximo eclipse, información sobre si éste será total o parcial, información sobre la hora de comienzo, la hora de mayor incidencia, y la hora de finalización.</string>
+
+    <string name="walkthrough_eclipse_center_img_desc">Una imagen de la característica del Centro Eclipse</string>
 
     <string name="walkthrough_audio_description">Cuando sea la hora del comienzo del siguiente eclipse, recibirá una notificación automática para abrir Eclipse Soundscapes.
         La aplicación lo guiará por el evento principal con descripciones de audio ilustrativas de los momentos más importantes de un eclipse.
         Estas descripciones de audio, creadas por el centro nacional de contenido multimedia accesible (National Center for Accessible Media GBH), son explicaciones de fotos desarrolladas con lenguaje especializado para que las personas ciegas y con baja visión puedan ser partícipes de un eclipse.
         Cuando la descripción de audio termine, habrá la posibilidad de elegir escuchar más información educativa o explorar esa característica de un eclipse usando el Rumble Map.</string>
+
+    <string name="walkthrough_audio_img_desc">Una imagen del reproductor multimedia</string>
 
     <!-- Future Eclipses -->
     <string name="future_eclipse_features">Seguimiento, Rumble Maps, Narraciones</string>
